@@ -3,7 +3,9 @@ Revision history for libeio
 TODO: maybe add mincore support? available on at leats darwin, solaris, linux, freebsd
 
 1.0
-        - readdir: corretcly set errno to ENOMEM when OOM.
+        - readdir: correctly handle malloc failures.
+        - readdir: new flags argument, can return inode
+          and possibly filetype, can sort in various ways.
 	- added EIO_STACKSIZE.
 	- added msync, mtouch support (untested).
         - added sync_file_range (untested).
